{
    "name": "PlayerInputSystem",
    "maps": [
        {
            "name": "General",
            "id": "5a64f1e9-ac3d-4d61-83be-f9db9cab8193",
            "actions": [
                {
                    "name": "SetZero",
                    "type": "Button",
                    "id": "8a9c5945-99b1-488a-a2de-0700fca9ccfa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AltZero",
                    "type": "Button",
                    "id": "aaaa18c0-2579-4fb1-84c6-2eae61f567bb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Save",
                    "type": "Button",
                    "id": "ddbb9d1b-b5ba-4419-bb8b-9d319756e7c7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "One Modifier",
                    "id": "51b56443-2e54-4ec5-8789-3b7ee536a236",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetZero",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "dc807900-21d7-43c0-8d08-7389b3dc6daf",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "SetZero",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "540467d0-82c8-4480-ad58-4a67832ebf15",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "SetZero",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "One Modifier",
                    "id": "7102f6bc-cdee-4841-b3f6-ef4a60d65844",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Save",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "f2dd367b-4a1f-4caa-9b8a-e25f125f6fe5",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Save",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "3b2726d5-1139-4516-857a-daa26dacb52d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Save",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "One Modifier",
                    "id": "5334b1bc-24a1-44a0-b8cc-3f36041ad0cb",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AltZero",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "20922096-d3bf-4200-80bd-ac4fab9a9b5a",
                    "path": "<Keyboard>/alt",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AltZero",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "1e30f771-8d06-4050-b7b9-26db57e631d0",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AltZero",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Edit",
            "id": "453f31a4-71b6-496b-8a3a-335e7119de3c",
            "actions": [
                {
                    "name": "Up",
                    "type": "Button",
                    "id": "9b9eb5fe-f3c8-461c-a087-cd833aad50c1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Down",
                    "type": "Button",
                    "id": "161b0d47-dc7e-495b-ace2-bd356384eea7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Right",
                    "type": "Button",
                    "id": "661e0712-3caa-445f-9244-dc94ab371360",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Left",
                    "type": "Button",
                    "id": "9a57e969-0b80-4cdb-88cf-42a377ee5649",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Switch",
                    "type": "Button",
                    "id": "55f44301-231b-42da-a8be-c81a19c21fb8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "b9b395a2-627a-40bb-99db-61e033750212",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Delete",
                    "type": "Button",
                    "id": "a4fb32cb-3706-40dd-bff3-b50dc9cbc924",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "568d240c-d1c8-48f9-8081-9ea7e60abef9",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f842b82-3bd8-4764-b9b7-2a1ef9cbab7c",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d6110de9-5305-4c25-ad7c-26d8258d252d",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "394d0632-df31-480c-b3ed-ff81633829b3",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "114450b6-ece5-442e-88f1-eba124c7d74f",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Switch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d014eeb1-2473-432a-87f9-244184846690",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e36de542-f863-4d14-9caa-e2bf8e82aa37",
                    "path": "<Keyboard>/delete",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Delete",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Tools",
            "id": "c3c3243f-c60b-4c39-b165-260511da9c4b",
            "actions": [
                {
                    "name": "NormalNote",
                    "type": "Button",
                    "id": "d1ec1bf4-01bf-4334-a116-97e493d4024b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BottomNote",
                    "type": "Button",
                    "id": "b569bcfe-538d-4b19-b6ba-d95292d456a8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Eraser",
                    "type": "Button",
                    "id": "207cfa21-646a-4cd1-a0c6-7dcc296d1ee9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Special",
                    "type": "Button",
                    "id": "d5c4bdfc-d6d5-4e66-bbe9-249167648ab8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Change",
                    "type": "Button",
                    "id": "41c4aed4-1510-4890-a112-702f213ff83d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "edaac24a-dda7-4668-8d85-c3048557a5ca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3db2a0a7-9a48-4ab0-8f3c-d3d492e36081",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "NormalNote",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1072dea-55e9-4771-b0e6-c7ff84315e0c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "BottomNote",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8d6207fd-07d0-49de-a682-a4e1dee4e5d0",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Eraser",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "682f5d40-23fd-4971-b59f-ac36888a50d4",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Special",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a4d5da2f-8164-469d-b262-ceb2cd2cf81f",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Change",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c9eafe65-8351-42fb-a7a9-0ee43f6871a7",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Joystick",
            "bindingGroup": "Joystick",
            "devices": [
                {
                    "devicePath": "<Joystick>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "XR",
            "bindingGroup": "XR",
            "devices": [
                {
                    "devicePath": "<XRController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}